[project]
name = "context-dep"
version = "0.1.1"
description = "Python dependency injection using context managers. "
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Mark Lidenberg", email = "marklidenberg@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[dependency-groups]
dev = [
    "dony>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
